// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeriodInput render should render correctly 1`] = `
.emotion-9 {
  background-color: #FFFFFF;
  border: 1px solid#AAAAB9;
  border-radius: 2px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-right: 2.5rem;
  padding-left: 0.1rem;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
}

.emotion-9:required {
  box-shadow: none;
}

.emotion-9:not(:disabled):hover {
  border-color: #8F8FA2;
}

.emotion-9:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-9:focus-within:not(:disabled) {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
  outline: none;
}

.emotion-4 {
  cursor: default;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  position: relative;
}

.emotion-13 input {
  padding-right: 3rem;
}

.emotion-12 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  position: relative;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #3A3A47;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  border: none;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:focus {
  box-shadow: none !important;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-11 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-11:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-11:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-11:focus {
  box-shadow: none;
}

.emotion-10 {
  fill: currentColor;
  font-size: 1.5rem;
}

<div>
  <div>
    <div
      class="emotion-13"
    >
      <div
        class="emotion-9"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <input
                autocomplete="off"
                class="emotion-0"
                placeholder="dd/mm/aaaa"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <span
          class="emotion-4"
        >
          <strong>
            até
          </strong>
        </span>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <input
                autocomplete="off"
                class="emotion-0"
                placeholder="dd/mm/aaaa"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <span
        class="emotion-12"
      >
        <button
          class="emotion-11"
          tabindex="-1"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-10"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <defs>
                <path
                  d="M12 0c.619 0 .95.27.995.812l.005.13V2h1c1.273 0 1.938.607 1.996 1.822L16 4v14c0 1.273-.607 1.938-1.822 1.996L14 20H2C.727 20 .062 19.393.004 18.178L0 18V4.004c0-1.275.607-1.942 1.822-2L2 2h1V1c-.002-.667.33-1 1-1 .621 0 .954.287.998.862L5.004 1v1H11V.941C11 .314 11.333 0 12 0zm2 8H2v10h12V8zm-8.998 6H6c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L6 16H5c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L5.002 14H6zM11 14c.667 0 1 .333 1 1s-.333 1-1 1h-1c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1zm-5-4c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L6 12H5c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L5.002 10H6zm5 0c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L11 12h-1c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995l.138-.005H11zm3-6H2v2h12V4z"
                  id="calendar-outline_svg__a"
                />
              </defs>
              <use
                transform="translate(4 2)"
                xlink:href="#calendar-outline_svg__a"
              />
            </svg>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`PeriodInput render should render correctly when disabled 1`] = `
.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  position: relative;
}

.emotion-13 input {
  padding-right: 3rem;
}

.emotion-12 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  position: relative;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #3A3A47;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  border: none;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:focus {
  box-shadow: none !important;
}

.emotion-10 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-9 {
  background-color: #FFFFFF;
  border: 1px solid#AAAAB9;
  border-radius: 2px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-right: 2.5rem;
  padding-left: 0.1rem;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
  background: #F0F0F5;
}

.emotion-9:required {
  box-shadow: none;
}

.emotion-9:not(:disabled):hover {
  border-color: #8F8FA2;
}

.emotion-9:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-9:focus-within:not(:disabled) {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
  outline: none;
}

.emotion-4 {
  cursor: default;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #AAAAB9;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  cursor: not-allowed;
  opacity: 0.5;
  border-radius: inherit;
}

.emotion-11 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-11:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-11:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-11:focus {
  box-shadow: none;
}

<div>
  <div>
    <div
      class="emotion-13"
    >
      <div
        class="emotion-9"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <input
                autocomplete="off"
                class="emotion-0"
                disabled=""
                placeholder="dd/mm/aaaa"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <span
          class="emotion-4"
        >
          <strong>
            até
          </strong>
        </span>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <input
                autocomplete="off"
                class="emotion-0"
                disabled=""
                placeholder="dd/mm/aaaa"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <span
        class="emotion-12"
      >
        <button
          class="emotion-11"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-10"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <defs>
                <path
                  d="M12 0c.619 0 .95.27.995.812l.005.13V2h1c1.273 0 1.938.607 1.996 1.822L16 4v14c0 1.273-.607 1.938-1.822 1.996L14 20H2C.727 20 .062 19.393.004 18.178L0 18V4.004c0-1.275.607-1.942 1.822-2L2 2h1V1c-.002-.667.33-1 1-1 .621 0 .954.287.998.862L5.004 1v1H11V.941C11 .314 11.333 0 12 0zm2 8H2v10h12V8zm-8.998 6H6c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L6 16H5c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L5.002 14H6zM11 14c.667 0 1 .333 1 1s-.333 1-1 1h-1c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1zm-5-4c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L6 12H5c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L5.002 10H6zm5 0c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L11 12h-1c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995l.138-.005H11zm3-6H2v2h12V4z"
                  id="calendar-outline_svg__a"
                />
              </defs>
              <use
                transform="translate(4 2)"
                xlink:href="#calendar-outline_svg__a"
              />
            </svg>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`PeriodInput render should render correctly when invalid 1`] = `
.emotion-4 {
  cursor: default;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  position: relative;
}

.emotion-13 input {
  padding-right: 3rem;
}

.emotion-12 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  position: relative;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #3A3A47;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  border: none;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:focus {
  box-shadow: none !important;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-11 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-11:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-11:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-11:focus {
  box-shadow: none;
}

.emotion-10 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-9 {
  background-color: #FFFFFF;
  border: 1px solid#AAAAB9;
  border-radius: 2px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-right: 2.5rem;
  padding-left: 0.1rem;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
  border: solid 1px #D01E29;
}

.emotion-9:required {
  box-shadow: none;
}

.emotion-9:not(:disabled):hover {
  border-color: #8F8FA2;
}

.emotion-9:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-9:focus-within:not(:disabled) {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
  outline: none;
}

.emotion-9:focus-within:not(:disabled) {
  border: solid 1px #D3D4DD;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #D01E29;
}

<div>
  <div>
    <div
      class="emotion-13"
    >
      <div
        class="emotion-9"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <input
                autocomplete="off"
                class="emotion-0"
                placeholder="dd/mm/aaaa"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <span
          class="emotion-4"
        >
          <strong>
            até
          </strong>
        </span>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <input
                autocomplete="off"
                class="emotion-0"
                placeholder="dd/mm/aaaa"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <span
        class="emotion-12"
      >
        <button
          class="emotion-11"
          tabindex="-1"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-10"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <defs>
                <path
                  d="M12 0c.619 0 .95.27.995.812l.005.13V2h1c1.273 0 1.938.607 1.996 1.822L16 4v14c0 1.273-.607 1.938-1.822 1.996L14 20H2C.727 20 .062 19.393.004 18.178L0 18V4.004c0-1.275.607-1.942 1.822-2L2 2h1V1c-.002-.667.33-1 1-1 .621 0 .954.287.998.862L5.004 1v1H11V.941C11 .314 11.333 0 12 0zm2 8H2v10h12V8zm-8.998 6H6c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L6 16H5c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L5.002 14H6zM11 14c.667 0 1 .333 1 1s-.333 1-1 1h-1c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1zm-5-4c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L6 12H5c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L5.002 10H6zm5 0c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L11 12h-1c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995l.138-.005H11zm3-6H2v2h12V4z"
                  id="calendar-outline_svg__a"
                />
              </defs>
              <use
                transform="translate(4 2)"
                xlink:href="#calendar-outline_svg__a"
              />
            </svg>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;
